--- a/src/components/Information/information.module.scss
+++ b/src/components/Information/information.module.scss
@@ -1,4 +1,19 @@
 .information {
+	border: 1px solid lightgrey;
+	border-radius: 12px;
+	padding: 10px;
 	font-weight: 600;
 	font-size: large;
+	display: flex;
+	flex-wrap: nowrap;
+	max-width: 600px;
+	justify-content: space-between;
+	align-items: center;
+
+	.statusInfo {
+		flex-basis: 200px;
+	}
+	.playerInfo {
+		flex-grow: 0.6;
+	}
 }
